fixed the alignment of the links so they display in the center of the header

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     background-color: lightsteelblue;
     color: snow;
     display: flex;
+    justify-content: space-between;
     flex-direction: row;
 }
 
@@ -31,9 +32,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     margin-right: 15px;
-    
     font-size: 110%;
-    
+    align-items: center;
 }
 
 .header div li {
